# streaming-backend

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  test-websocket.html
frontend/: test-player.html
src/: GUIA_STREAMING_PROJECT.md
src/drivers/: metrics_driver.py  path_driver.py  websocket_driver.py
src/factories/: video_reader_factory.py  video_stream_factory.py
src/interfaces/: metrics_interface.py  video_path_interface.py  video_reader.py  video_reader_interface.py
src/server/: app.py
src/server/routes/: videos_route.py  websocket_route.py
src/streaming/: reader.py
src/tests/: benchmark_memoryview.py
src/utils/: routes_utils.py
